<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_app_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="16dp"
    android:background="@color/lightBackgroundColor"
    android:visibility="gone"
    app:layout_constraintBottom_toTopOf="@id/banner"
    app:layout_constraintTop_toBottomOf="@id/SummaryViewGuideline"
    tools:showIn="@layout/app_list_activity">

    <TextView
        android:id="@+id/noAppText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_free"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/animation_view" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/confetti" />

    <androidx.cardview.widget.CardView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/shareHint"
        app:layout_constraintTop_toBottomOf="@id/animation_view">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/share" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/shareHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/share"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:paddingLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@id/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/share" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:text="@string/rate"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/shareView"
        android:layout_height="300dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="parent"
        android:background="@color/lightBackgroundColor">

        <TextView
            android:id="@+id/noAppTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_free"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/centerImage" />

        <ImageView
            android:id="@+id/centerImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_notif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_notif"
            app:layout_constraintTop_toBottomOf="@id/centerImage"
            app:layout_constraintEnd_toStartOf="@id/appName"
            android:layout_marginRight="8dp"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/centerImage" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>