<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.inmobi.ads"
    android:layout_width="match_parent"
    app:layout_constraintTop_toBottomOf="@id/appBarLayout"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@color/lightBackgroundColor"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_main">

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/appWelcome"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        android:layout_margin="8dp"
        android:backgroundTint="#fafafa"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:src="@drawable/ic_notif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"
                android:text="@string/welcome_message"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/MainInfoText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/main_text"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        app:layout_constraintTop_toBottomOf="@id/appWelcome"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/subtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/secondaryTextColor"
        android:text="@string/scan_help"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/MainInfoText"
        app:autoSizeTextType="uniform" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="90dp" />

    <FrameLayout
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/language"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtext">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:lottie_rawRes="@raw/scan"
            app:lottie_loop="true"
            app:lottie_autoPlay="true" />
    </FrameLayout>


    <androidx.cardview.widget.CardView
        app:layout_constraintBottom_toTopOf="@id/bannermain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/language"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        android:layout_margin="8dp"
        android:backgroundTint="#fafafa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightBackgroundColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/appIcon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>



    <com.inmobi.ads.InMobiBanner
        android:id="@+id/bannermain"
        android:layout_width="320dp"
        android:layout_height="49dp"
        ads:placementId="plid-1591987009038"
        ads:refreshInterval="60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>